2001-05-18  Radek Doulik  <rodo@ximian.com>

	* htmlengine.c (parse_table): added support for align=left/right
	for tables

	* htmlengine-edit-table.c (html_engine_table_set_align): new
	function

2001-05-18  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (parse_d): fix dt rendering so that it always
	splits the flow, even outside of dl, this is "feature" of
	netscape/mozilla is used in several prominant places like bonsai
	(fixes http://bugzilla.helixcode.com/show_bug.cgi?id=2043).

2001-05-17  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (parse_f): fix color parsing so that it pushes the
	current color rather than black if no color is specified (fixes
	http://bugzilla.ximian.com/show_bug.cgi?id=2911).

2001-05-17  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-table.c (html_engine_table_set_bg_color): alloc
	space for new color if needed

	* htmltablecell.h: removed padding

	* htmlengine-edit-table.c (new_cell): don't set cell background
	from table (it's resolved dynamically now)
	(html_engine_table_set_bg_color): allow NULL c which means disable
	bg color
	(html_engine_get_table): new helper function
	(html_engine_table_set_padding): new method
	(html_engine_table_set_border_width): added t parameter

	* htmlimage.c (html_image_pointer_load): ref image pointer
	(html_image_factory_register): don't ref image pointer before
	loading (it's done in load now) but ref all image pointers (for
	register)
	(html_image_factory_unregister): unref image pointer in unregister

	* htmltablecell.c (draw_background_helper): use table bg pixmap if
	needed

	* htmlengine.c (parse_table): don't use table bg pixmap as starting
	row bg pixmap

	* htmlengine-edit-table.c (html_engine_table_set_bg_color): new
	method
	(html_engine_table_set_bg_pixmap): new method

	* htmlengine.c (parse_table): don't use table bg color as starting
	row color

	* htmltablecell.c (draw_background_helper): use table bg color if
	needed

2001-05-15  Radek Doulik  <rodo@ximian.com>
