@@ -1,3 +1,8 @@
+2001-05-21  Radek Doulik  <rodo@ximian.com>
+
+	* htmlengine-edit-table.c (html_engine_table_set_align): updated
+	to use ClueAligned
+
 2001-05-18  Radek Doulik  <rodo@ximian.com>
 
 	* htmlengine.c (parse_table): added support for align=left/right
